--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
 <html lang="en">
-<head meta charset="UTF-8"></head>
+<head>
+<meta charset="UTF-8">
 <title>Home- Kevin Arevalo</title>
 </head>
 <body>
