--- a/project3/index.html
+++ b/project3/index.html
@@ -5,7 +5,7 @@
 <title>Home- Kevin Arevalo</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-<p>"Life is like a box of chocolates, you never know what you're gonna get" -Forest Gump</p>
+    <h1>Project 3</h1>
+<p>Project 3 Content goes here.</p>
 </body>
 </html>
