--- a/project3/news.html
+++ b/project3/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="css/style.css" >
@@ -8,14 +8,14 @@
     <body>
     <header class="header-three">
        <nav class="row">
-            <div>
+          <div>
             <img class="logo" src="images/logo.png" alt="logo">
             <ul class="main-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="music.html">Music</a></li>
                 <li><a href="news.html">News</a></li>
             </ul>
-            </div>
+          </div>
        </nav>
         <div class="text-box">
             <h1 id="newsheader">News</h1>
