--- a/project4/about.html
+++ b/project4/about.html
@@ -24,7 +24,7 @@
         <hr>
         <section class="container">
             <div class="linkedinphoto">
-                <img src="images/linkedinphoto.jpg">
+                <img src="images/linkedinphoto.jpg" alt="linkedin">
             </div>
             <div id="header">
                 <h1>ABOUT ME</h1>
