--- a/project4/contact.html
+++ b/project4/contact.html
@@ -29,7 +29,7 @@
                     <p>Phone: 240-360-9434</p>
                 </div>
                 <div id="contactimg">
-                    <img src="images/contactus.png">
+                    <img src="images/contactus.png" alt="contactus">
                 </div>
             </section>
             <section class="container3">
