--- a/project4/item1.html
+++ b/project4/item1.html
@@ -24,7 +24,7 @@
         <hr>
         <section class="container">
             <div>
-                <img src="images/poster.png">
+                <img src="images/poster.png" alt="poster">
             </div>
             <div id="header">
                 <h1>Glacier National Park Poster</h1>
