--- a/project4/item2.html
+++ b/project4/item2.html
@@ -24,7 +24,7 @@
         <hr>
         <section class="container">
             <div>
-                <img src="images/bookcover.jpg">
+                <img src="images/bookcover.jpg" alt="bookcover">
             </div>
             <div id="header">
                 <h1>Valerie Book Cover</h1>
