--- a/project4/item3.html
+++ b/project4/item3.html
@@ -24,7 +24,7 @@
         <hr>
         <section class="container">
             <div>
-                <img src="images/movieposter.jpg">
+                <img src="images/movieposter.jpg" alt="movieposter">
             </div>
             <div id="header">
                 <h1>The Origin Movie Poster</h1>
